--- a/yinst/README
+++ b/yinst/README
@@ -8,6 +8,8 @@ Z is yahoo-specific versioning.
 
 Release Notes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.2.0.5
+	Need to run 'sbt/sbt package' to create shark jars.
 Version 0.2.0.4
 	Packaging the shark libraries created by simple build tool.
 Version 0.2.0.3
