Packaged as a stable version with classpath changes to run script.

--- a/yinst/README
+++ b/yinst/README
@@ -8,6 +8,8 @@ Z is yahoo-specific versioning.
 
 Release Notes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.2.1.0
+	Packaged as a stable version with classpath changes to run script.
 Version 0.2.0.6
 	Do not use the type checker with StackMapTable attribute by setting JAVA_OPTS -XX:-UseSplitVerifier
 Version 0.2.0.5
