--- a/yinst/README
+++ b/yinst/README
@@ -8,6 +8,8 @@ Z is yahoo-specific versioning.
 
 Release Notes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.2.1.5
+        Bump version on merge
 Version 0.2.1.2
 	Yinst dependency on miners_hive changed to 0.9.0.4
 Version 0.2.1.1
