--- a/yinst/README
+++ b/yinst/README
@@ -8,6 +8,8 @@ Z is yahoo-specific versioning.
 
 Release Notes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.7.2.1
+	Bump version
 Version 0.2.1.8
 	Packaged from master @ commit : https://git.corp.yahoo.com/harshars/shark/commit/93f907f70c42989336d33835d3659af47fcc9a35
 Version 0.7.2
