Revert Nandu's compr pull request

--- a/yinst/README
+++ b/yinst/README
@@ -15,7 +15,7 @@ Version 0.2.1.8
 Version 0.7.2
 	Compression!
 Version 0.2.1.7
-	Bump version on switch to master from adp
+	Bump version 
 Version 0.2.1.6
 	Packaged from adp branch @ commit : https://git.corp.yahoo.com/harshars/shark/commit/af469c6609d28590fcb515a48ca9baa201019cf8
 Version 0.2.1.5
