--- a/yahoo-build/README
+++ b/yahoo-build/README
@@ -9,6 +9,8 @@ v is build number
 
 Release Notes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.8.0.1.1
+        Headless user setting required
 Version 0.8.0.1.0
 	Merge bdas to amplab @ commit : baefdb86d392795aa6505ec1796fd53d41d772ed
 Version 0.7.2.100.1
