Typo fixes while setting headless user

--- a/yahoo-build/README
+++ b/yahoo-build/README
@@ -9,6 +9,8 @@ v is build number
 
 Release Notes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.8.0.1.2
+	Typo fixes while setting headless user
 Version 0.8.0.1.1
         Headless user setting required
 Version 0.8.0.1.0
