--- a/yahoo-build/README
+++ b/yahoo-build/README
@@ -9,6 +9,8 @@ v is build number
 
 Release Notes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.8.0.1.3
+	Bump version - Build from bdas master
 Version 0.8.0.1.2
 	Typo fixes while setting headless user
 Version 0.8.0.1.1
