--- a/yahoo-build/README
+++ b/yahoo-build/README
@@ -9,18 +9,20 @@ v is build number
 
 Release Notes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.8.0.2.0
+	Three more compression techniques now available for columns.
 Version 0.8.0.1.3
 	Bump version - Build from bdas master
 Version 0.8.0.1.2
 	Typo fixes while setting headless user
 Version 0.8.0.1.1
-        Headless user setting required
+	Headless user setting required
 Version 0.8.0.1.0
 	Merge bdas to amplab @ commit : baefdb86d392795aa6505ec1796fd53d41d772ed
 Version 0.7.2.100.1
 	CI plugs and configuration
 Version 0.7.2.100.0
-        Compression,Hadoop 23 Packaged from branch-0.1 @ commit https://git.corp.yahoo.com/bdas/shark/commit/3b0d5eac563b678a1ddea529db3541e54b02a4b1
+	Compression,Hadoop 23 Packaged from branch-0.1 @ commit https://git.corp.yahoo.com/bdas/shark/commit/3b0d5eac563b678a1ddea529db3541e54b02a4b1
 Version 0.7.2.1
 	Bump version
 Version 0.2.1.8
@@ -32,7 +34,7 @@ Version 0.2.1.7
 Version 0.2.1.6
 	Packaged from adp branch @ commit : https://git.corp.yahoo.com/harshars/shark/commit/af469c6609d28590fcb515a48ca9baa201019cf8
 Version 0.2.1.5
-        Bump version on merge
+	Bump version on merge
 Version 0.2.1.2
 	Yinst dependency on miners_hive changed to 0.9.0.4
 Version 0.2.1.1
@@ -50,13 +52,13 @@ Version 0.2.0.3
 Version 0.2.0.2
 	Dependency on hadoop binaries will be resolved prior to other packages, forcing the build tool to pull in the right version.
 Version 0.2.0.1
-        First cut
-        All external deps are brought in as jars
-        Standard yinst directory structure not in use.
-        Symlink /home/y/libexec/miners_shark/ will always be available
-        and kept current pointing to
-        /home/y/libexec/miners_shark-VERSION
-        Added a conf file & yinst setting to set SCALA_HOME,
-        SPARK_HOME etc...
-        yinst set params control where deps are picked up from - see
-        yicf.
+	First cut
+	All external deps are brought in as jars
+	Standard yinst directory structure not in use.
+	Symlink /home/y/libexec/miners_shark/ will always be available
+	and kept current pointing to
+	/home/y/libexec/miners_shark-VERSION
+	Added a conf file & yinst setting to set SCALA_HOME,
+	SPARK_HOME etc...
+	yinst set params control where deps are picked up from - see
+	yicf.
