--- a/yahoo-build/README
+++ b/yahoo-build/README
@@ -9,6 +9,8 @@ v is build number
 
 Release Notes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Version 0.8.0.2.4
+	Update version for CI
 Version 0.8.0.2.3
 	Revert saving HiveConf on CTAS
 Version 0.8.0.2.2
